property to use application name registered with Eureka in lower case
spring.cloud.gateway.discovery.locator.lower-case-service-id=true
Before this property we need to enter application name in uppercase in our request as http://localhost:8082/USERS-WS/users/status
After --> http://localhost:8082/users-ws/users/status  --> uniform lowercase format of http request

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.application.name=api-gateway
 eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka
 
 spring.cloud.gateway.discovery.locator.enabled=true
+#Below property allow us to enter application name in lowercase in the http request
+# without this annotation http://localhost:8082/USERS-WS/users/status
+# with this annotation http://localhost:8082/users-ws/users/status
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
